Fix Watson solution formatting on Firefox/Ubuntu and Chrome 15/Mac.

--- a/web/watson_2_0/investigators_report/solution/style.css
+++ b/web/watson_2_0/investigators_report/solution/style.css
@@ -22,5 +22,7 @@
 .ans5 .i2 .num > span { font-size: 11px; width: 100%; padding-top: 8px; }
 .ans7 .i1 .num > span { font-size: 12px; width: 100%; padding-top: 8px; }
 .ans7 .i0 .num > span { font-size: 18px; padding-top: 3px; }
+.ans4 .i0 .num,
+.ans7 .i0 .num { left: 100px; white-space: nowrap; }
 
 .ans3, .ans6 { page-break-before: always; }
